--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <nav class="navbar">
         <div class="upper-side">
-            <div class="logo">Open Ocean</div>
+            <div class="logo">World NFT Market</div>
             <div class="my-nfts-nav"><a href="#" onclick="showSection('my-nfts')"> <img src="content/user.png" alt="NFT 1"></a></div>
         </div>
         <ul class="nav-links">
