--- a/index.html
+++ b/index.html
@@ -154,14 +154,18 @@
             <p><strong>📝 </strong> <span id="nft-description">No Description Available.</span></p>
         </div>
 
-        <div class="nft-price-row">
-            <p><span id="nft-price"><img src="content/money-icon.png" alt="NFT Icon" style="width: 25px; height: 20px; position: relative; top: 20px;">37.22 NFT</span></p>
-        </div>
+        <div class="flex-container">
+            <div class="nft-price-row">
+                <p><span id="nft-price">
+                <img src="content/money-icon.png" alt="NFT Icon"> 37.22 NFT
+            </span></p>
+            </div>
 
-        <div class="count-container">
-            <button class="count-button" id="decrease-count">-</button>
-            <span id="nft-count-display">1</span>
-            <button class="count-button" id="increase-count">+</button>
+            <div class="count-container">
+                <button class="count-button" id="decrease-count">-</button>
+                <span id="nft-count-display">1</span>
+                <button class="count-button" id="increase-count">+</button>
+            </div>
         </div>
     </div>
 </div>
