--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
                 <button class="count-button" id="increase-count">+</button>
             </div>
         </div>
+
+        <div class="container-buy-buttons">
+            <button class="buy-nft-button">
+                <img src="content/money-icon.png" alt="NFT Icon"> <span id="buy-nft-price">970.00</span>
+            </button>
+            <button class="buy-nft-button-extra">
+                <img src="content/nft_extra.png" alt="NFT Extra Icon"> <span id="buy-nft-extra-price">1.00</span>
+            </button>
+        </div>
     </div>
 </div>
 
