--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </header>
 
 <section id="hero" class="hero">
-    <div class="hero-content">
+    <div class="hero-content" id="hero-content">
         <h1>Discover and Trade Digital Collectibles</h1>
         <div class="nft-showcase">
             <img src="content/nft_1.png" alt="NFT 1">
