--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
     </div>
 </div>
 
-<script type="module" src="config_loader.js"></script>
-<script src="index.js"></script>
+<script type="module" src="js/config_loader.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
 
