--- a/indexR.html
+++ b/indexR.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/HomePageStyle.css">
     <link rel="stylesheet" href="styles/TrendingsPageStyle.css">
     <link rel="stylesheet" href="styles/CartPageStyle.css">
+    <link rel="stylesheet" href="styles/CategoryPageStyle.css">
     <link rel="stylesheet" href="styles/UserPageStyle.css">
     <link rel="stylesheet" href="styles/UtilitiesStyle.css">
     <link rel="stylesheet" href="styles/ErrorPopupStyle.css">
@@ -69,10 +70,25 @@
             <input type="text" placeholder="Search NFTs...">
             <button class="filter-btn">Filter</button>
         </div>
+        <h2>🔎 Explore Categories</h2>
 
-        <div class="cards">
-            <!-- Здесь будут вставлены NFT карточки -->
-        </div>
+            <div class="slider-category-list-container">
+                <div class="slider-control prev" aria-label="Previous"> <img src="content/arrow.png" alt="arrow"> </div>
+                <div class="slider-wrapper">
+                    <div class="slider-category-list">
+                        <!-- Place for slider elements -->
+                    </div>
+                </div>
+                <div class="slider-control next" aria-label="Next"> <img src="content/arrow.png" alt="arrow"> </div>
+            </div>
+            <div class="category-list-container">
+                <div id="category-list" class="category-list">
+                    <!-- Place for elements in container-->
+                </div>
+
+                <div id="pagination-container" class="pagination"></div>
+            </div>
+
     </section>
 
     <!-- Cart -->
@@ -152,6 +168,19 @@
         </div>
     </section>
 
+    <div id="sort-popup" class="sort-popup-overlay" style="display: none;">
+        <div class="sort-popup">
+            <h3>Sort NFTs</h3>
+            <ul>
+                <li onclick="sortCategoryList('price-asc')">Price: Low to High</li>
+                <li onclick="sortCategoryList('price-desc')">Price: High to Low</li>
+                <li onclick="sortCategoryList('name-asc')">Name: A → Z</li>
+                <li onclick="sortCategoryList('name-desc')">Name: Z → A</li>
+            </ul>
+            <button class="close-sort-btn" onclick="closeSortPopup()">Close</button>
+        </div>
+    </div>
+
     <footer class="footer">
         <div class="nav-item trending" onclick="setActiveTab(this)">
             <img src="content/trending.png" alt="Trendings" class="nav-icon">
@@ -178,6 +207,8 @@
     <div class="panel-content">
         <button class="close-panel" onclick="closeNFTDetails()">← Back</button>
         <img id="nft-image" class="nft-image" src="" alt="NFT Image">
+        <div id="nft-tags" class="nft-tag-container"></div>
+
         <h2 id="nft-title" class="nft-title">NFT Title</h2>
         <p id="nft-description">Description here</p>
         <h4>Collection</h4>
@@ -269,6 +300,7 @@
 <!-- JS -->
 
 <script type="module" src="js/index.js"></script>
+<script type="module" src="js/CategorySectionLogic.js"></script>
 <script type="module" src="js/CartLogic.js"></script>
 <script type="module" src="js/UserPageLogic.js"></script>
 
