--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div class="hero-content" id="hero-content">
         <h1>Discover and Trade Digital Collectibles</h1>
         <div class="nft-showcase">
-            <img src="content/Avatars/nft_1.png" alt="NFT 1">
-            <img src="content/Avatars/nft_2.png" alt="NFT 2">
-            <img src="content/Avatars/nft_3.png" alt="NFT 3">
-            <img src="content/Avatars/nft_4.png" alt="NFT 4">
-            <img src="content/Avatars/nft_5.png" alt="NFT 5">
+            <img src="content/AvatarIcons/nft_1.png" alt="NFT 1">
+            <img src="content/AvatarIcons/nft_2.png" alt="NFT 2">
+            <img src="content/AvatarIcons/nft_3.png" alt="NFT 3">
+            <img src="content/AvatarIcons/nft_4.png" alt="NFT 4">
+            <img src="content/AvatarIcons/nft_5.png" alt="NFT 5">
         </div>
         <p>Browse trending NFTs and become part of the growing NFT community.</p>
 
