--- a/indexR.html
+++ b/indexR.html
@@ -72,8 +72,9 @@
 
     <!-- Categories/Search -->
     <section id="categories" class="section" style="display:none;">
-        <div class="search-container">
+        <div class="search-container" id="search-container">
             <input type="text" placeholder="Search NFTs...">
+
             <button class="filter-btn">Filter</button>
         </div>
         <h2>🔎 Explore Categories</h2>
