--- a/indexR.html
+++ b/indexR.html
@@ -28,7 +28,7 @@
         <div class="gradient-circle"></div>
 
         <div class="logo-container">
-            <img src="logo.png" alt="Logo" class="logo-image">
+            <img src="content/logo.png" alt="Logo" class="logo-image">
         </div>
         <h2>🔥 Welcome</h2>
         <p class="desc">Track your journey in the NFTropolis world. Keep an eye on your progress and discover the
